# Journal-CMS

./: .gitignore  docker-compose.yml  nginx.conf
FlanerMagazineCms/: .gitignore  Dockerfile  README.md  (+4 more)
backend/: .dockerignore  Dockerfile-python  README.md  alembic.ini  docker-compose.yml  pre-commit.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2024_09_09_1430-a465fdcdc017_create_table.py  2024_10_05_1450-3d74e8766b11_add_product_table.py  2024_11_02_2002-b14d202b42dd_payments_users_products.py
backend/app/: configure_app.py  email_utils.py  errors.py  exception_handlers.py  internal_exception_handler.py  logger.py  main.py  openapi_responses.py  openapi_type.py  schemas.py  schemas_utils.py  settings.py
backend/app/api/: core.py
backend/app/api/routes/: auth.py  payment.py  product.py  products.py  user.py  users.py
backend/app/auth/: auntification.py  deps.py  errors.py  hash.py  openapi_responses.py  transport.py
backend/app/celery/: settings.py  tasks.py
backend/app/database/: core.py  dal.py  initial.py  models.py  redis.py  utils.py
backend/app/payment/: dal.py  errors.py  models.py  openapi_responses.py  schemas.py  utils.py
backend/app/product/: dal.py  errors.py  models.py  openapi_responses.py  schemas.py
backend/app/test/: conftest.py  test_auth.py
backend/app/test/tests/: auth.py
backend/app/user/: dal.py  errors.py  models.py  openapi_responses.py  schemas.py
backend/email-templates/: internal_error.html  product_email.html  recive_product.html  recovery_password.html  verify_code.html
(+42 files in other folders)
