[tool.poetry]
name = "journal_cms_backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = { version = "^2.0.36", extras = ["asyncio"] }
fastapi = { version = ">=0.100.0, <0.101.0", extras = ["standard"] }
psycopg2-binary = "^2.9.9"
pydantic_settings = "^2.5.2"
redis = "^5.1.1"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
jinja2 = "^3.1.4"
pydantic = { extras = ["email"], version = "^2.9.2" }
python-multipart = "^0.0.17"
uvicorn = "0.32.0"
pytz = "2024.2"
alembic = "^1.13.3"


[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
pytest-mock = "^3.14.0"
mypy = "^1.13.0"
ruff = "^0.7.3"
isort = "5.13.2"

[tool.ruff]
line-length = 88
extend-exclude = [
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
    "alembic",
    "test",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "S",
    "PL",
]
ignore = [
    "E203",
    "E501",
]


[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.isort]
skip = [
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
    "alembic",
    "test"
]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 3
line_length = 88



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
